# TelemetryLMU

./: Cargo.toml  Dioxus.toml  index.html  justfile  package-lock.json  package.json  tailwind.css  vite.config.ts
assets/: main.css  tailwind.css
src/: App.tsx  GraphView.tsx  Sidebar.tsx  graph_view.rs  main.rs  telemetry.rs  telemetry.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: graph_view.rs  lib.rs  main.rs  telemetry.rs
