[package]
name = "telemetry_lmu"
version = "0.1.0"
authors = ["Karlito <karelos101@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.1", features = ["fullstack"] }
memmap2 = "0.9.10"
gloo-timers = "0.3.0"
tokio = "1.50.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
